# ratify

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: algo.rs  catalog.rs  config.rs  errors.rs  main.rs  parallel.rs  progress.rs  reporting.rs  utils.rs
tests/: conftest.py  test_append.py  test_catalog_file.py  test_corruptions.py  test_existence_only.py  test_interactive_update.py  test_missing_files.py  test_overwrite.py  test_ratify_ignore.py  test_sanity.py
