[package]
description = "Utility for signing and verifying files and directories"
edition = "2021"
license = "MIT"
name = "ratify"
readme = "README.md"
repository = "https://github.com/vmalloc/ratify"
version = "2.1.0"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.8", features = ["derive"]}
crossbeam-channel = "0.5.8"
digest = "0.10.7"
hex = "0.4.3"
human_bytes = "0.4.3"
indicatif = "0.17.8"
itertools = "0.12.1"
log = "0.4.20"
md-5 = "0.10.6"
num_cpus = "1.16.0"
pathdiff = "0.2.1"
serde = "1.0.197"
serde_json = "1.0.114"
sha1 = "0.10.6"
sha2 = "0.10.8"
strum = {version = "0.25.0", features = ["derive"]}
termcolor = "1.4.1"
thiserror = "1.0.61"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
walkdir = "2.4.0"

[dev-dependencies]
assert_fs = "1.0.13"
pretty_assertions = "1.4.0"
